# sandbox

./: .env.example  .gitignore  README.md  pyproject.toml  sandbox_project_plan.md  skills-lock.json  user_flow.drawio
.github/workflows/: run-sandbox-jobs.yml  validate-sandbox-jobs.yml
sandbox/: __init__.py  _helpers.py  _template.py.tmpl  cli.py  exceptions.py  io.py  job_creation.py  job_wizard.py  runner.py  validate.py
sandbox/jobs/daily/: smoke_test.py
sandbox/jobs/one_time/: dummy_dataframe.py
tests/: conftest.py  test_cli.py  test_helpers.py  test_io.py  test_job_wizard.py  test_runner.py  test_validate.py
tests/fixtures/: job_async_main.py  job_bad_table_name.py  job_empty_output_tables.py  job_empty_owner.py  job_import_time_io.py  job_main_with_args.py  job_missing_docstring.py  job_missing_main.py  job_missing_owner.py  valid_daily_job.py
