[project]
name = "sandbox-io"
version = "0.1.0"
description = "Lightweight internal framework for Python transformation jobs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awswrangler>=3.9",
    "pandas>=2.0",
    "boto3>=1.34",
    "python-dotenv>=1.2.2",
    "botocore[crt]>=1.43.36",
]

[project.scripts]
sandbox = "sandbox.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[s3,glue,athena]>=5.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
